--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-select": "^5.7.2",
     "recoil": "^0.7.7",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
